agent9527-rs/tui/src/chatwidget/snapshots/agent9527_tui__chatwidget__tests__slash_language_picker.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Select Language
  Language packs are loaded independently. Restart Agent9527 after selection.

  Type to search languages
› English (current)            Built into Agent9527 and always available.
  Français (fr-FR) (disabled)  Locale fr-FR · test.fr-FR (disabled: Requires i18n API
                               2..=3; this Agent9527 build provides 1.)
  简 体 中 文  (zh-CN)             Locale zh-CN · test.zh-CN

  Press enter to confirm or esc to go back
